# IGV_code

./: README.md  System_summery.txt  commandline_tool.py  girshell.py  girwalker.py
IGV Code/: calfile.h  decide.h  ethernet.h  serial.h
IGV Code/SterlingsCode/: CloudSegmentator.cpp  CloudSegmentator.h
PCLVisualizer/: CMakeLists.txt  pclvisualizer.cpp
PlainSegTest/: Makefile  cmake_install.cmake  monoImageRight.pgm
bb2cloud/: CMakeCache.txt  Makefile  bb2viewer.cpp  cmake_install.cmake  rawLeftImage.pgm
beep/: beep
cloudSegTest/: planar_segmentation.cpp
cloud_viewer/: Makefile  cloud_viewer
cloud_writer/: test_pcd.txt
new_color_seg/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  region_growing_rgb_segmentation  region_growing_rgb_segmentation.cpp
old_igv_code/: CVTest.cpp  Decision 1.3.h  ImageGrabber  Test1.cbp  Test1.depend  Test1.layout  afsocket.cpp  afsocket.h  calfile.cpp  circle.h  compass.cpp  compass.h  globals.cpp  globals.h  gps.cpp  gps.h  line.h  serial.cpp  stereo.cpp  stereo.h  wcomm.cpp  wcomm.h
old_igv_code/SterlingsCode/: bumblebeeToCloud.cpp  bumblebeeToCloud.h  pctConvert.h
pcdViewer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pcdViewer  pcdViewer.cpp
plainSegResample/: CMakeCache.txt  cmake_install.cmake  monoImageRight.pgm  plainSegResample.cpp  rawRightImage.pgm
region_growing_color_seg/: CMakeCache.txt  Makefile  cmake_install.cmake  region_growing_rgb_segmentation.cpp
resample/: CMakeCache.txt  resampling
samples/: 0.pcd  01.pcd  011.pcd  0111.pcd  path_1.pcd  path_2.pcd  path_3.pcd  path_4.pcd
utils/: README.md  beep.py  driver2.py  gircli.py  girdriver.py  girserve.py  girshell.py  girwalker.py
utils/PCLVisualizer/: CMakeCache.txt  Makefile  cmake_install.cmake  pclvisualizer
utils/PlainSegTest/: CMakeCache.txt  CMakeLists.txt  CMakeLists_old.txt  PlainSegTest  PlainSegTest.cpp  bb2viewer.cpp  disparity16.pgm  monoImageLeft.pgm  rawLeftImage.pgm  rawRightImage.pgm
utils/area_segmenter/: CMakeCache.txt  CMakeLists.txt  Makefile  area_seg.cpp  area_segmenter  cmake_install.cmake
utils/bb2cloud/: CMakeLists.txt  bb2viewer  cmake_install.cmake  disparity16.pgm  heoooo.pcd  monoImageLeft.pgm  monoImageRight.pgm  outcloud.pcd  rawRightImage.pgm  stereoto3dpoints.cpp
(+306 files in other folders)
